--- a/panda-website/components/nav/style.css
+++ b/panda-website/components/nav/style.css
@@ -1,29 +1,16 @@
 .link-item--active::after,
 .link-item:hover::after{
+    @apply left-0 -bottom-[15px] pa opacity-100 z-[2] transition-all duration-700 w-full h-[15px];
     content: "";
-    position: absolute;
-    bottom: -15px;
-    opacity: 1;
-    left: 0;
-    width: 100%;
-    height: 15px;
     background: url(../../public/t37.png) no-repeat center top;
     background-size: 100% 15px;
-    z-index: 2;
-    transition: 0.7s all;
+
 }
 
 
 .link-item::after{
+    @apply left-0 bottom-0 pa opacity-0 z-[2] transition-all duration-700 w-full h-[15px];
     content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    height: 15px;
-    width: 100%;
     background: url(../../public/t37.png) no-repeat center top;
     background-size: 100% 15px;
-    z-index: 2;
-    transition: 0.7s all;
 }
