chore: 完成门店走马灯

--- a/panda-website/components/shop-carousel/style.css
+++ b/panda-website/components/shop-carousel/style.css
@@ -1,17 +1,14 @@
 .swiper {
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    @apply w-full py-[50px];
 }
 
 .swiper-slide {
-    background-position: center;
-    background-size: cover;
-    width: 600px;
-    height: 300px;
+    @apply w-[950px] h-[570px] bg-cover bg-center
 }
 
-.swiper-slide img {
-    display: block;
-    width: 100%;
+.swiper-slide-next img,
+.swiper-slide-prev img{
+    @apply rounded-[12px]
 }
+
+
